[package]
name = 'meta-node'
version = "0.0.1"
edition = '2018'
build = 'build.rs'

[dependencies]
ctrlc = { features = ['termination'], version = '3.1.3' }
futures = '0.3.1'
futures01 = { package = 'futures', version = '0.1.29'}
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
log = '0.4.8'
parking_lot = '0.9'
structopt = "0.3.8"
tokio = '0.1.22'
trie-root = '0.15.2'

# Substrate packages
sc-basic-authorship = '0.9'
sc-cli = '0.9'
sc-client-api = '3.0'
sc-consensus = '0.9'
sc-consensus-manual-seal = '0.9'
sc-executor = '0.9'
sc-network = '0.9'
sc-rpc = '3.0'
sc-rpc-api = '0.9'
sc-service = '0.9'
sc-transaction-pool = '3.0'
sp-api = '3.0'
sp-block-builder = '3.0'
sp-blockchain = '3.0'
sp-consensus = '0.9'
sp-core = '3.0'
sp-inherents = '3.0'
sp-io = '3.0'
sp-runtime = '3.0'
sp-timestamp = '3.0'
sp-transaction-pool = '3.0'

# local packages
runtime = { package = "manual-runtime", path = "../../runtimes/manual-runtime" }
# meta-consensus = { path = "../../pallets/meta-consensus" }

[build-dependencies]
substrate-build-script-utils = '3.0'
vergen = '3.0.4'
