[package]
name = "manual-runtime"
version = "0.0.1"
edition = "2018"

[dependencies]
parity-scale-codec = { version = "2.0", default-features = false, features = ["derive"] }
serde = { version = "1.0", optional = true, features = ["derive"] }

# Substrate packages
frame-executive = { version = '3.0', default-features = false}
frame-support = { version = '3.0', default-features = false }
frame-system = { version = '3.0', default-features = false }
pallet-balances = { version = '3.0', default-features = false }
pallet-randomness-collective-flip = { version = '3.0', default-features = false }
pallet-sudo = { version = '3.0', default-features = false }
pallet-timestamp = { version = '3.0', default-features = false }
pallet-transaction-payment = { version = '3.0', default-features = false }
sp-api = { version = '3.0', default-features = false }
sp-block-builder = { version = '3.0', default-features = false }
sp-core = { version = '3.0', default-features = false }
sp-inherents = { version = '3.0', default-features = false }
sp-io = { version = '3.0', default-features = false }
sp-offchain = { version = '3.0', default-features = false }
sp-runtime = { version = '3.0', default-features = false }
sp-session = { version = '3.0', default-features = false }
sp-std = { version = '3.0', default-features = false }
sp-transaction-pool = { version = '3.0', default-features = false }
sp-version = { version = '3.0', default-features = false }

# local packages
# meta-consensus = { default-features = false, path = "../../pallets/meta-consensus" }

[build-dependencies]
substrate-wasm-builder = "4.0.0"

[features]
default = ["std"]
std = [
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"parity-scale-codec/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-io/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
#	"meta-consensus/std",
]
