[package]
name    = "meta-prometheus-endpoint"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = { version = "0.3.19", default-features = false, features = ["io"] }
hyper        = { version = "0.14.16", default-features = false, features = ["http1", "server", "tcp"] }
log          = "0.4.17"
prometheus   = { version = "0.13.0", default-features = false }
thiserror    = "1.0"
tokio        = { version = "1.17.0", features = ["parking_lot"] }

[dev-dependencies]
hyper = { version = "0.14.16", features = ["client"] }
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
