[package]
name = "meta-defichain-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
jsonrpsee       = { version = "0.14.0", features = ["server", "macros"] }

sp-api 		    = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-blockchain   = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }
sp-runtime 		= { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.27" }

meta-defichain-rpc-runtime-api  = { path = "./runtime-api", package = "meta-defichain-rpc-runtime-api"}
